# mal_unpack

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dll_injection.cpp  dll_injection.h  driver_comm.cpp  driver_comm.h  file_util.cpp  file_util.h  hollows_hunter.cpp  hollows_hunter.h  main.cpp  mal_unpack.cpp  mal_unpack.h  mal_unpack.manifest  mal_unpack.rc  mal_unpack_res.rc  mal_unpack_ver.h  params.h  process_util.cpp  process_util.h  unpack_dir.bat  unpack_scanner.cpp  unpack_scanner.h  util.cpp  util.h  version.h
mal_unpack_lib/: README.md
mal_unpack_lib/malunpack/: malunpack.py  test.py
mal_unpack_lib/util_exe/: .gitignore  README.md  fetch.py
mal_unpack_py/mal_unpack_lib/: README.md
mal_unpack_py/mal_unpack_lib/malunpack/: .gitignore  README.md  malunpack.py  test.py
mal_unpack_py/runner/: .gitignore  requirements.txt
runner/: .gitignore  README.md  mal_unpack_runner.py
util/: file_util.cpp  path_util.cpp  path_util.h  process_util.cpp  process_util.h  rm_util.cpp  rm_util.h
util_exe/: requirements.txt
